--- a/src/components/App.css
+++ b/src/components/App.css
@@ -41,3 +41,85 @@ body,
 .progress__bar {
     marign: 0.3em 0 0 0 !important;
 }
+
+/* ColorPanel.js */
+.color__container {
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    width: 35px;
+    border-radius: 3px;
+    alignItems: 'center';
+}
+
+.icon__container {
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    width: 35px;
+    border-radius: 3px;
+    alignItems: 'center';
+}
+
+.color__square {
+    width: 35px;
+    height: 35px;
+}
+
+.color__overlay {
+    width: 85px;
+    height: 35px;
+    transform: rotate(225deg);
+}
+
+/* Typing.js */
+.user__typing {
+    font-style: italic;
+    font-weight: bold;
+    margin-right: 3px;
+}
+
+.typing {
+    width: 5em;
+    height: 2em;
+    position: relative;
+    padding: 10px;
+    margin-left: 5px;
+    background: #e6e6e6;
+    border-radius: 20px;
+}
+
+.typing__dot {
+    float: left;
+    width: 8px;
+    height: 8px;
+    margin: 0 4px;
+    background: #8d8c91;
+    border-radius: 50%;
+    opacity: 0;
+    animation: loadingFade 1s infinite;
+}
+
+.typing__dot:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.typing__dot:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+.typing__dot:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+@keyframes loadingFade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 0;
+    }
+}
